--- a/code.html
+++ b/code.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager with Pomodoro Timer</title>
+    <title>To-Do List & Pomodoro Timer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Task Manager</h1>
+        <h1>To-Do List & Pomodoro Timer</h1>
     </header>
 
     <section id="todo-list">
@@ -26,8 +27,6 @@
         <button id="reset-timer">Reset</button>
     </section>
 
-    <script>
-        // JavaScript code for handling the to-do list and Pomodoro timer can go here
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
